--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  padding: 24px 0;
+  padding: 24px 30px;
 }
 ul li a {
   border: 1px solid var(--stroke-color);
