--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body * {
 }
 #container {
   width: 100%;
-  max-width: 588px;
+  max-width: 800px;
   padding: 0 24px;
   margin: 56px auto 0px;
   -webkit-backdrop-filter: blur(4px);
@@ -38,43 +38,44 @@ body * {
   width: 300px;
   border-radius: 10px;
 }
-#profile p {
-  font-weight: 500;
-  line-height: 50px;
-  margin-top: 8px;
+
+#meet p {
+  font-weight: 400;
+
+  padding: 5px 2px 5px 2px;
 }
+
 /* links */
 ul {
+  justify-content: center;
+  align-items: center;
   list-style: none;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   gap: 8px;
-  padding: 24px 30px;
+  padding: 0px 24px 50px 24px;
 }
 ul li a {
-  border: 1px solid var(--stroke-color);
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 16px 24px;
-  background: var(--surface-color);
-  border-radius: 10px;
-  text-decoration: none;
-  font-weight: 500;
 }
 
 ul li a:hover {
   background: var(--surface-color-hover);
-  border: 2px solid var(--text-color);
+  border-radius: 10px;
+  background: var(--highlight-color);
 }
 
 #social-links {
-display: flex;
-justify-content: center;
-font-size: 30px;
-padding: 24px 0;
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
+  padding: 0px 0px 24px;
 }
-#social-links a{
+#social-links a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -82,9 +83,11 @@ padding: 24px 0;
   transition: background 0.2s;
   border-radius: 50%;
 }
-#social-links a:hover{
+#social-links a:hover {
   background: var(--highlight-color);
-
+}
+#contact {
+  text-align: center;
 }
 footer {
   padding: 24px 0;
